feat: Implement input sanitization across services and user profiles
- Added InputSanitizer class to sanitize user inputs and URLs to prevent XSS attacks.
- Updated ServiceManagementService, UserService, and WorkerService to use InputSanitizer for sanitizing names, descriptions, and URLs.
- Enhanced BusinessRepository with eager fetching using EntityGraph to optimize performance.
- Introduced AtLeastOneNotNull validation annotation for partial updates.
- Added CORS configuration to application properties for better security and flexibility.
- Implemented advanced filtering options in the frontend with a new FilterPanel component.
- Improved geocoding functionality using OpenStreetMap Nominatim for reverse geocoding.
- Added performance indexes to the database for common search queries.
- Updated various frontend components to support lazy loading of images for better performance.